# paperforms

./: .gitignore  README.md  env.example  hello.py  pyproject.toml  server.py
api/: main.py
api/prompts/: custom_prompt.txt  w2_prompt.txt  w9_prompt.txt
api/routes/: extractor_routes.py  health_check_routes.py  ner_extractor_routes.py  ocr_routes.py  router.py  validator_routes.py
api/services/: cleanup_service.py  gemini_extractor_service.py  llm_service.py  ner_extractor_service.py  ocr_service.py  textract_ocr_service.py  validation_service.py
api/util/: logging.py  prompts.py  rules.py  types.py
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx
client/src/components/badge-check/: BadgeCheck.component.tsx
client/src/data/: forms.json
client/src/features/: Upload.page.css  Upload.page.tsx
client/src/service/: api.service.ts  validation.service.ts
client/src/util/: string.util.ts
docs/1099-validator/: Health Check.bru  bruno.json
docs/1099-validator/ner-extractor/: W2_extract.bru  W9_extract.bru
docs/1099-validator/ocr/: Get Form Responses.bru
docs/1099-validator/validator/: Validate 1099.bru  Validate Tax Form.bru
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: Card.jsx  Checkbox.jsx  Input.jsx  TextArea.jsx  Transition.jsx
ui/src/lib/: api.js  constants.js  store.js
ui/src/pages/: Error.page.jsx  Home.jsx  Home.page.jsx  Layout.jsx  Results.page.jsx  Rules.page.jsx  Upload.jsx  Upload.page.jsx
(+17 files in other folders)
