[project]
name = "w9-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amazon-textract-caller>=0.2.4",
    "amazon-textract-textractor>=1.8.5",
    "asyncio>=3.4.3",
    "boto3>=1.34.131",
    "fastapi>=0.112.1",
    "langchain-community>=0.2.16",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.6",
]
